# PokeAPI-Rust-SDK

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: client.rs  error.rs  lib.rs  models.rs  tests.rs
